-
Bug
-
Resolution: Fixed
-
P4: Low
-
6.8.1
-
None
-
32bit PowerPC (big endian)
6.6.62-gentoo-ppc32-ppc #1 SMP Thu Jan 9 05:40:30 UTC 2025 ppc 7447/7457, altivec supported PowerMac3,1 GNU/Linux
processor : 0
cpu : 7447/7457, altivec supported
clock : 900.000000MHz
revision : 1.2 (pvr 8002 0102)
bogomips : 50.00
total bogomips : 50.00
timebase : 25000000
platform : PowerMac
model : PowerMac3,1
machine : PowerMac3,1
motherboard : PowerMac3,1 MacRISC MacRISC2 Power Macintosh
detected as : 65 (PowerMac G4 AGP Graphics)
pmac flags : 00000004
pmac-generation : NewWorld
Memory : 2048 MB
32bit PowerPC (big endian) 6.6.62-gentoo-ppc32-ppc #1 SMP Thu Jan 9 05:40:30 UTC 2025 ppc 7447/7457, altivec supported PowerMac3,1 GNU/Linux processor : 0 cpu : 7447/7457, altivec supported clock : 900.000000MHz revision : 1.2 (pvr 8002 0102) bogomips : 50.00 total bogomips : 50.00 timebase : 25000000 platform : PowerMac model : PowerMac3,1 machine : PowerMac3,1 motherboard : PowerMac3,1 MacRISC MacRISC2 Power Macintosh detected as : 65 (PowerMac G4 AGP Graphics) pmac flags : 00000004 pmac-generation : NewWorld Memory : 2048 MB
-
-
7ad2083ec (dev), 4d34eee36 (6.9), 4a451597f (6.8)
Conversion from TIF (CMYK) to BMP (RGB) produces different output depending on architecture.
Source file:
This is result (looks OK) on amd64:

However, on PowerPC, the colors are significantly different.

I suspect that QImage::convertToFormat doing wrong conversion.
I use following simple program to reproduce the problem with conversion from TIF->BMP:
https://invent.kde.org/frameworks/kimageformats/-/blob/master/tests/imageconverter.cpp
./bin/imageconverter cmyk8.tif output.bmp
- relates to
-
QTBUG-132900 Build Qt under -Wundef
-
- Reported
-
| For Gerrit Dashboard: QTBUG-132875 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 617898,2 | Fix CMYK8888 on big-endian platforms | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 618081,2 | Fix CMYK8888 on big-endian platforms | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 618123,2 | Fix CMYK8888 on big-endian platforms | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |